syntax = "proto3";
option go_package = "pkg/grpc";
package tree;

service TreeService {
    rpc InitTree(PlantTreeRequest) returns (GetTreeResponse) {}
    rpc PlantTree(PlantTreeRequest) returns (GetTreeResponse) {}
    rpc GetTreeByUserId(GetTreeRequest) returns (GetTreeResponse) {}
    rpc GetMyTree(GetTreeRequest) returns (GetTreeResponse) {}
    rpc GetTreeRanking(GetTreeRankingRequest) returns (GetTreeRankingResponse) {}
    rpc GrowthTree(GrowthRequest) returns (GrowthResponse) {}
}

message PlantTreeRequest {
    string id = 1;
}

message GetTreeRequest {
    string id = 1;
}

message GetTreeResponse {
    Tree tree = 1;
}

message GetTreeRankingRequest {
    int32 limit = 1;
}

message GetTreeRankingResponse {
    repeated Tree ranking = 1;
}

message Tree {
    string id = 1;
    int32 stage = 2;
    int32 water = 3;
    int32 fertilizer = 4;
    int64 plant_at = 5;
}

message GrowthRequest {
    string user_id = 1;
    string target = 2; // 'water' or 'fertilizer'
    int32 amount = 3; 
}

message GrowthResponse {
    Tree tree = 1;
}